--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,14 @@
             <version>${jstl.version}</version>
         </dependency>
 
+        <distributionManagement>
+            <repository>
+                <id>venuLogin</id>
+                <url>https://github.com/venuagurla19/venuLogin.git</url>
+            </repository>
+        </distributionManagement>
+        
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
